# src/routes/auth.router.js
@@ -10,6 +10,7 @@ const auth = require("../controllers/auth.controller");
 // URL => /auth
 
 router.post("/login", auth.login);
-router.all("/logout", auth.logout);
+// router.all("/logout", auth.logout) // swagger .all metodunu görmez
+router.get("/logout", auth.logout);
 
 module.exports = router;
